[package]
name = "witness-parser"
version = "1.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "num_enum/std",
    "das-types",
    "hex/std",
    "serde",
    "serde_json",
    "strum/std",
    "thiserror",
    "blake2b-rs",
]
no_std = [
    "das-types/no_std",
    "hex/alloc",
    "thiserror-no-std",
    "strum",
    "blake2b-ref",
]

[dependencies]
# ckb crates
ckb-std = { workspace = true }
ckb-types = { workspace = true, optional = true }
# CAREFUL! This version should be the same as which in ckb-standalone-types, otherwise will occur many type error in current codes.
molecule = { version = "0.7", default-features = false }
# third party crates
# Temporarily use thiserror-no-std
thiserror = { workspace = true, optional = true }
thiserror-no-std = { workspace = true, optional = true }
log = "0.4.0"
hex = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
# macro
paste = "1.0"
num_enum = { version = "0.6", default-features = false }
strum = { version = "0.24", features = ["derive"], default-features = false, optional = true }
# dotbit
blake2b-rs = { version = "0.2", optional = true }
blake2b-ref = { version = "0.3", optional = true }
das-types = { workspace = true, optional = true, default-features = false }
